--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>drony</title>
+    <title>Pelikan coordinator</title>
     <link rel="stylesheet" href="https://openlayers.org/en/v3.19.1/css/ol.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
-<h1>DRONY</h1>
+<h1>Pelikan</h1>
 <div id="content">
     <div id="drone_list">
         <div class="list_item color-secondary-2-0">D111</div>
