--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,19 +8,20 @@
 <body>
 <h1>Pelikan</h1>
 <div id="content">
-    <div id="drone_list">
-        <div class="list_item color-secondary-2-0">D111</div>
-        <div class="list_item color-secondary-2-0">D222</div>
-        <div class="list_item color-secondary-2-0">D333</div>
+    <div id="drone_list"/>
+        <div class="list_item header_item">DRONE LIST</div>
     </div>
     <div id="map" class="map"></div>
     <div id="buttons">
         <button id="requestAirspaceBtn">Request Airspace</button>
+        <button id="retrieveAirspaceBtn">Retrieve Airspace</button>
+        <button id="retrieveDronesBtn">Retrieve Drones</button>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://openlayers.org/en/v3.19.1/build/ol.js"></script>
 <script src="js/map.js"></script>
 <script src="js/airspace.js"></script>
+<script src="js/drone.js"></script>
 </body>
 </html>
