show id on icon click

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     <div id="drone_list"/>
         <div class="list_item header_item">DRONE LIST</div>
     </div>
-    <div id="map" class="map"></div>
+    <div id="map" class="map"><div id="popup"></div></div>
     <div id="buttons">
         <button id="requestAirspaceBtn">Request Airspace</button>
         <button id="retrieveAirspaceBtn">Retrieve Airspace</button>
