hide drones button

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
     <div id="buttons">
         <button id="requestAirspaceBtn">Request Airspace</button>
         <button id="retrieveAirspaceBtn">Retrieve Airspace</button>
-        <button id="retrieveDronesBtn">Retrieve Drones</button>
+        <button id="retrieveDronesBtn" hidden = "true">Retrieve Drones</button>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
