circle retrieved automatically

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
     <div id="map" class="map"><div id="popup"></div></div>
     <div id="buttons">
         <button id="requestAirspaceBtn">Request Airspace</button>
-        <button id="retrieveAirspaceBtn">Retrieve Airspace</button>
+        <button id="retrieveAirspaceBtn" hidden = "true">Retrieve Airspace</button>
         <button id="retrieveDronesBtn" hidden = "true">Retrieve Drones</button>
     </div>
 </div>
