--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="https://openlayers.org/en/v3.19.1/build/ol.js"></script>
+<script src="https://openlayers.org/en/v3.19.1/build/ol-debug.js"></script>
 <script src="js/map.js"></script>
 <script src="js/airspace.js"></script>
 <script src="js/drone.js"></script>
