--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <h1>Pelikan</h1>
 <div id="content">
     <div id="drone_list"/>
-        <div class="list_item header_item">DRONE LIST</div>
+        <div class="header_item">DRONE LIST</div>
     </div>
     <div id="map" class="map"><div id="popup"></div></div>
     <div id="buttons">
@@ -23,5 +23,6 @@
 <script src="js/map.js"></script>
 <script src="js/airspace.js"></script>
 <script src="js/drone.js"></script>
+<script src="js/drone_list_gui.js"></script>
 </body>
 </html>
